--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Prueba por favor</h1>
+    <h1>Prueba dos c: por favor OH</h1>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
